--- a/index.html
+++ b/index.html
@@ -25,17 +25,18 @@
                 <div class="uk-width-1-4">
                     <img src="res/avatar.png">
                 </div>
-                <div class="uk-width-3-4 uk-flex uk-flex-column">
+                <div class="uk-flex uk-flex-column">
                     <div><h1>Hi, Patrick!</h1></div>
+                    <!-- <div class="uk-margin-top uk-card uk-card-default uk-card-small uk-card-body uk-border-rounded"> -->
                     <div class="uk-margin-top">
-                        <div class="uk-text-large uk-margin-bottom">Facilitate 20 games to become a facilitating guru!</div>
+                        <div class="uk-card-title uk-margin-bottom">Facilitate 20 games to become a facilitating guru!</div>
                         <div class="uk-flex uk-flex-middle">
                             <div class="uk-width-1-1 progress-bar uk-border-rounded">
                                 <div class="progress"></div>
                             </div>
                             <img src="res/trophy.svg" width="55" height="55" class="uk-margin-left" uk-svg>
                         </div>
-                        <div class=" uk-margin-bottom">5/20 games facilitated</div>
+                        <div class="">5/20 games facilitated</div>
                     </div>
                 </div>
             </div>
