Created tab: start game -> go to game.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                             <img src="res/cross.svg" width="22" height="22" uk-svg onclick="editNote_cancel(this.parentElement.parentElement)">
                                         </div>
                                     </td>
-                                    <td><a class="uk-button uk-button-secondary uk-border-rounded game-action" href="">Start Game</a></td>
+                                    <td><a class="uk-button uk-button-secondary uk-border-rounded game-action" href="">Go to Game</a></td>
                                 </tbody>
                                 <tbody>
                                     <td>The Ascent</td>
@@ -152,7 +152,7 @@
                                             <img src="res/cross.svg" width="22" height="22" uk-svg onclick="editNote_cancel(this.parentElement.parentElement)">
                                         </div>
                                     </td>
-                                    <td><a class="uk-button uk-button-secondary uk-border-rounded game-action" href="">Start Game</a></td>
+                                    <td><a class="uk-button uk-button-secondary uk-border-rounded game-action" href="">Go to Game</a></td>
                                 </tbody>
                             </table>
                         </li>
