Adjust colours for consistency with rest of site.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                             <img class="player-clipboard" src="res/clipboards.svg" width="22" height="22" onclick="copyLink(this)">
                                         </div>
                                     </td>
-                                    <td><a class="uk-button uk-button-secondary uk-border-rounded game-action" href="">Go to Game</a></td>
+                                    <td><a class="uk-button uk-button-default uk-border-rounded game-action" href="">Go to Game</a></td>
                                 </tbody>
                                 <tbody>
                                     <td>The Hunt</td>
@@ -99,7 +99,7 @@
                                             <img class="player-clipboard" src="res/clipboards.svg" width="22" height="22" onclick="copyLink(this)">
                                         </div>
                                     </td>
-                                    <td><a class="uk-button uk-button-secondary uk-border-rounded game-action" href="">Go to Game</a></td>
+                                    <td><a class="uk-button uk-button-default uk-border-rounded game-action" href="">Go to Game</a></td>
                                 </tbody>
                                 <tbody>
                                     <td>The Trip</td>
@@ -117,7 +117,7 @@
                                             <img class="player-clipboard" src="res/clipboards.svg" width="22" height="22" onclick="copyLink(this)">
                                         </div>
                                     </td>
-                                    <td><a class="uk-button uk-button-secondary uk-border-rounded game-action" href="">Go to Game</a></td>
+                                    <td><a class="uk-button uk-button-default uk-border-rounded game-action" href="">Go to Game</a></td>
                                 </tbody>
                             </table>
                         </li>
@@ -140,7 +140,7 @@
                                             <img src="res/cross.svg" width="22" height="22" uk-svg onclick="editNote_cancel(this.parentElement.parentElement)">
                                         </div>
                                     </td>
-                                    <td><a class="uk-button uk-button-secondary uk-border-rounded game-action" href="">Go to Game</a></td>
+                                    <td><a class="uk-button uk-button-default uk-border-rounded game-action" href="">Go to Game</a></td>
                                 </tbody>
                                 <tbody>
                                     <td>The Ascent</td>
@@ -152,7 +152,7 @@
                                             <img src="res/cross.svg" width="22" height="22" uk-svg onclick="editNote_cancel(this.parentElement.parentElement)">
                                         </div>
                                     </td>
-                                    <td><a class="uk-button uk-button-secondary uk-border-rounded game-action" href="">Go to Game</a></td>
+                                    <td><a class="uk-button uk-button-default uk-border-rounded game-action" href="">Go to Game</a></td>
                                 </tbody>
                             </table>
                         </li>
@@ -175,7 +175,7 @@
                                             <img src="res/cross.svg" width="22" height="22" uk-svg onclick="editNote_cancel(this.parentElement.parentElement)">
                                         </div>
                                     </td>
-                                    <td><a class="uk-button uk-button-secondary uk-border-rounded game-action" href="">Get Results</a></td>
+                                    <td><a class="uk-button uk-button-default uk-border-rounded game-action" href="">Get Results</a></td>
                                 </tbody>
                             </table>
                         </li>
