Remove superfluous resources. Add new trophy icon.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <div class="uk-width-1-1 progress-bar uk-border-rounded">
                                 <div class="progress"></div>
                             </div>
-                            <img src="res/trophy.svg" width="55" height="55" class="uk-margin-left" uk-svg>
+                            <img src="res/trophy 2.svg" width="55" height="55" class="uk-margin-left" uk-svg>
                         </div>
                         <div class="">5/20 games facilitated</div>
                     </div>
