--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                                 </thead>
                                 <tbody>
                                     <td>The Puzzle</td>
-                                    <td class="uk-flex note">
+                                    <td class="uk-flex uk-flex-middle note">
                                         <input type="text" value="" placeholder="Add notes about your game here" class="uk-input edit-note-input" onfocusout="editNote_cancel(this.parentElement)" disabled>
-                                        <img src="res/edit.svg" width="22" height="22" uk-svg class="edit-note-button" onclick="editNote_init(this.parentElement)">
-                                        <div class="uk-flex uk-flex-around edit-note-buttons">
-                                            <img src="res/check.svg" width="22" height="22" uk-svg onclick="editNote_save(this.parentElement.parentElement)">
-                                            <img src="res/cross.svg" width="22" height="22" uk-svg onclick="editNote_cancel(this.parentElement.parentElement)">
+                                        <span class="edit-note-button" uk-icon="icon: file-edit" onclick="editNote_init(this.parentElement)"></span>
+                                        <div class="uk-flex uk-flex-middle uk-flex-around edit-note-buttons">
+                                            <span uk-icon="icon: check" onclick="editNote_save(this.parentElement)"></span>
+                                            <span uk-icon="icon: close" onclick="editNote_cancel(this.parentElement)"></span>
                                         </div>
                                     </td>
                                     <td>
@@ -85,12 +85,12 @@
                                 </tbody>
                                 <tbody>
                                     <td>The Hunt</td>
-                                    <td class="uk-flex note">
+                                    <td class="uk-flex uk-flex-middle note">
                                         <input type="text" value="" placeholder="Add notes about your game here" class="uk-input edit-note-input" onfocusout="editNote_cancel(this.parentElement)" disabled>
-                                        <img src="res/edit.svg" width="22" height="22" uk-svg class="edit-note-button" onclick="editNote_init(this.parentElement)">
+                                        <span class="edit-note-button" uk-icon="icon: file-edit" onclick="editNote_init(this.parentElement)"></span>
                                         <div class="uk-flex uk-flex-around edit-note-buttons">
-                                            <img src="res/check.svg" width="22" height="22" uk-svg onclick="editNote_save(this.parentElement.parentElement)">
-                                            <img src="res/cross.svg" width="22" height="22" uk-svg onclick="editNote_cancel(this.parentElement.parentElement)">
+                                            <span uk-icon="icon: check" onclick="editNote_save(this.parentElement)"></span>
+                                            <span uk-icon="icon: close" onclick="editNote_cancel(this.parentElement)"></span>
                                         </div>
                                     </td>
                                     <td>
@@ -103,12 +103,12 @@
                                 </tbody>
                                 <tbody>
                                     <td>The Trip</td>
-                                    <td class="uk-flex note">
+                                    <td class="uk-flex uk-flex-middle note">
                                         <input type="text" value="" placeholder="Add notes about your game here" class="uk-input edit-note-input" onfocusout="editNote_cancel(this.parentElement)" disabled>
-                                        <img src="res/edit.svg" width="22" height="22" uk-svg class="edit-note-button" onclick="editNote_init(this.parentElement)">
+                                        <span class="edit-note-button" uk-icon="icon: file-edit" onclick="editNote_init(this.parentElement)"></span>
                                         <div class="uk-flex uk-flex-around edit-note-buttons">
-                                            <img src="res/check.svg" width="22" height="22" uk-svg onclick="editNote_save(this.parentElement.parentElement)">
-                                            <img src="res/cross.svg" width="22" height="22" uk-svg onclick="editNote_cancel(this.parentElement.parentElement)">
+                                            <span uk-icon="icon: check" onclick="editNote_save(this.parentElement)"></span>
+                                            <span uk-icon="icon: close" onclick="editNote_cancel(this.parentElement)"></span>
                                         </div>
                                     </td>
                                     <td>
@@ -132,24 +132,24 @@
                                 </thead>
                                 <tbody>
                                     <td>The Riddle</td>
-                                    <td class="uk-flex note">
+                                    <td class="uk-flex uk-flex-middle note">
                                         <input type="text" value="" placeholder="Add notes about your game here" class="uk-input edit-note-input" onfocusout="editNote_cancel(this.parentElement)" disabled>
-                                        <img src="res/edit.svg" width="22" height="22" uk-svg class="edit-note-button" onclick="editNote_init(this.parentElement)">
+                                        <span class="edit-note-button" uk-icon="icon: file-edit" onclick="editNote_init(this.parentElement)"></span>
                                         <div class="uk-flex uk-flex-around edit-note-buttons">
-                                            <img src="res/check.svg" width="22" height="22" uk-svg onclick="editNote_save(this.parentElement.parentElement)">
-                                            <img src="res/cross.svg" width="22" height="22" uk-svg onclick="editNote_cancel(this.parentElement.parentElement)">
+                                            <span uk-icon="icon: check" onclick="editNote_save(this.parentElement)"></span>
+                                            <span uk-icon="icon: close" onclick="editNote_cancel(this.parentElement)"></span>
                                         </div>
                                     </td>
                                     <td><a class="uk-button uk-button-default uk-border-rounded game-action" href="">Go to Game</a></td>
                                 </tbody>
                                 <tbody>
                                     <td>The Ascent</td>
-                                    <td class="uk-flex note">
+                                    <td class="uk-flex uk-flex-middle note">
                                         <input type="text" value="" placeholder="Add notes about your game here" class="uk-input edit-note-input" onfocusout="editNote_cancel(this.parentElement)" disabled>
-                                        <img src="res/edit.svg" width="22" height="22" uk-svg class="edit-note-button" onclick="editNote_init(this.parentElement)">
+                                        <span class="edit-note-button" uk-icon="icon: file-edit" onclick="editNote_init(this.parentElement)"></span>
                                         <div class="uk-flex uk-flex-around edit-note-buttons">
-                                            <img src="res/check.svg" width="22" height="22" uk-svg onclick="editNote_save(this.parentElement.parentElement)">
-                                            <img src="res/cross.svg" width="22" height="22" uk-svg onclick="editNote_cancel(this.parentElement.parentElement)">
+                                            <span uk-icon="icon: check" onclick="editNote_save(this.parentElement)"></span>
+                                            <span uk-icon="icon: close" onclick="editNote_cancel(this.parentElement)"></span>
                                         </div>
                                     </td>
                                     <td><a class="uk-button uk-button-default uk-border-rounded game-action" href="">Go to Game</a></td>
@@ -167,12 +167,12 @@
                                 </thead>
                                 <tbody>
                                     <td>A Christmas Puzzle</td>
-                                    <td class="uk-flex note">
+                                    <td class="uk-flex uk-flex-middle note">
                                         <input type="text" value="" placeholder="Add notes about your game here" class="uk-input edit-note-input" onfocusout="editNote_cancel(this.parentElement)" disabled>
-                                        <img src="res/edit.svg" width="22" height="22" uk-svg class="edit-note-button" onclick="editNote_init(this.parentElement)">
+                                        <span class="edit-note-button" uk-icon="icon: file-edit" onclick="editNote_init(this.parentElement)"></span>
                                         <div class="uk-flex uk-flex-around edit-note-buttons">
-                                            <img src="res/check.svg" width="22" height="22" uk-svg onclick="editNote_save(this.parentElement.parentElement)">
-                                            <img src="res/cross.svg" width="22" height="22" uk-svg onclick="editNote_cancel(this.parentElement.parentElement)">
+                                            <span uk-icon="icon: check" onclick="editNote_save(this.parentElement)"></span>
+                                            <span uk-icon="icon: close" onclick="editNote_cancel(this.parentElement)"></span>
                                         </div>
                                     </td>
                                     <td><a class="uk-button uk-button-default uk-border-rounded game-action" href="">Get Results</a></td>
