Replace copy link icons with UIkit icons.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                     <td>
                                         <div class="player-link">
                                             <input type="text" value="https://games.100pointchallenge.com/000" class="player-url" onclick="playerUrl_click(this)" readonly>
-                                            <img class="player-clipboard" src="res/clipboards.svg" width="22" height="22" onclick="copyLink(this)">
+                                            <span uk-icon="icon: copy" class="player-clipboard uk-flex uk-flex-middle" onclick="copyLink(this)"></span>
                                         </div>
                                     </td>
                                     <td><a class="uk-button uk-button-default uk-border-rounded game-action" href="">Go to Game</a></td>
@@ -96,7 +96,7 @@
                                     <td>
                                         <div class="player-link">
                                             <input type="text" value="https://games.100pointchallenge.com/000" class="player-url" onclick="playerUrl_click(this)" readonly>
-                                            <img class="player-clipboard" src="res/clipboards.svg" width="22" height="22" onclick="copyLink(this)">
+                                            <span uk-icon="icon: copy" class="player-clipboard uk-flex uk-flex-middle" onclick="copyLink(this)"></span>
                                         </div>
                                     </td>
                                     <td><a class="uk-button uk-button-default uk-border-rounded game-action" href="">Go to Game</a></td>
@@ -114,7 +114,7 @@
                                     <td>
                                         <div class="player-link">
                                             <input type="text" value="https://games.100pointchallenge.com/000" class="player-url" onclick="playerUrl_click(this)" readonly>
-                                            <img class="player-clipboard" src="res/clipboards.svg" width="22" height="22" onclick="copyLink(this)">
+                                            <span uk-icon="icon: copy" class="player-clipboard uk-flex uk-flex-middle" onclick="copyLink(this)"></span>
                                         </div>
                                     </td>
                                     <td><a class="uk-button uk-button-default uk-border-rounded game-action" href="">Go to Game</a></td>
