--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </ul>
             <ul class="uk-switcher uk-margin-medium">
                 <li>
-                    <a class="uk-button uk-button-primary uk-border-rounded" href="">Create Game</a>
+                    <button class="uk-button uk-button-primary uk-border-rounded" uk-toggle="target: #game-chooser">Create Game</button>
                     <ul uk-tab class="uk-margin-medium">
                         <li class="uk-active"><a href="">Active</a></li>
                         <li><a href="#">Created</a></li>
@@ -183,6 +183,17 @@
                 </li>
                 <li>subscriptions</li>
             </ul>
+        </div>
+    </div>
+
+    <div id="game-chooser" class="uk-flex-top uk-modal-container" uk-modal>
+        <div class="uk-modal-dialog uk-margin-auto-vertical uk-modal-body">
+            <h1 class="uk-modal-title">Choose your game!</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="uk-text-right">
+                <button class="uk-button uk-button-default uk-modal-close uk-border-rounded" type="button">Cancel</button>
+                <button class="uk-button uk-button-primary uk-border-rounded" type="button">Create Game</button>
+            </p>
         </div>
     </div>
 
