--- a/index.html
+++ b/index.html
@@ -187,9 +187,66 @@
     </div>
 
     <div id="game-chooser" class="uk-flex-top uk-modal-container" uk-modal>
-        <div class="uk-modal-dialog uk-margin-auto-vertical uk-modal-body">
+        <div class="uk-modal-dialog uk-margin-auto-vertical uk-modal-body uk-border-rounded">
             <h1 class="uk-modal-title">Choose your game!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div class="uk-margin uk-card uk-card-body uk-card-default uk-card-small uk-border-rounded">
+                <form class="uk-flex" uk-grid>
+                    <div class="uk-width-1-3">
+                        <label class="uk-form-label">I want my team to feel</label>
+                        <select class="uk-select">
+                            <option value="">Open and Invested</option>
+                            <option value="">Focussed and Driven</option>
+                            <option value="">Relaxed and Positive</option>
+                        </select>
+                    </div>
+                    <div class="uk-width-1-3">
+                        <label class="uk-form-label">Time available</label>
+                        <select class="uk-select">
+                            <option value="">15 minutes</option>
+                            <option value="">30 minutes</option>
+                            <option value="">45 minutes</option>
+                            <option value="">60+ minutes</option>
+                        </select>
+                    </div>
+                    <div class="uk-width-1-3">
+                        <label class="uk-form-label">Group size</label>
+                        <select class="uk-select">
+                            <option value="">&#60; 20 people</option>
+                            <option value="">20 - 50 people</option>
+                            <option value="">&#62; 50 people</option>
+                        </select>
+                    </div>
+                </form>
+                <div class="uk-margin uk-text-right">
+                    <button class="uk-button uk-button-primary uk-border-rounded" type="submit">Search Games</button>
+                </div>
+            </div>
+            <div class="uk-child-width-1-2@s uk-child-width-1-3@m uk-text-center uk-flex-center" uk-grid>
+                <div>
+                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 1</div>
+                </div>
+                <div>
+                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 2</div>
+                </div>
+                <div>
+                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 3</div>
+                </div>
+                <div>
+                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 4</div>
+                </div>
+                <div>
+                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 5</div>
+                </div>
+                <div>
+                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 6</div>
+                </div>
+                <div>
+                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 7</div>
+                </div>
+                <div>
+                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 8</div>
+                </div>
+            </div>
             <p class="uk-text-right">
                 <button class="uk-button uk-button-default uk-modal-close uk-border-rounded" type="button">Cancel</button>
                 <button class="uk-button uk-button-primary uk-border-rounded" type="button">Create Game</button>
