--- a/index.html
+++ b/index.html
@@ -187,70 +187,74 @@
     </div>
 
     <div id="game-chooser" class="uk-flex-top uk-modal-container" uk-modal>
-        <div class="uk-modal-dialog uk-margin-auto-vertical uk-modal-body uk-border-rounded">
-            <h1 class="uk-modal-title">Choose your game!</h1>
-            <div class="uk-margin uk-card uk-card-body uk-card-default uk-card-small uk-border-rounded">
-                <form class="uk-flex" uk-grid>
-                    <div class="uk-width-1-3">
-                        <label class="uk-form-label">I want my team to feel</label>
-                        <select class="uk-select">
-                            <option value="">Open and Invested</option>
-                            <option value="">Focussed and Driven</option>
-                            <option value="">Relaxed and Positive</option>
-                        </select>
+        <div class="uk-modal-dialog uk-margin-auto-vertical">
+            <div class="uk-modal-header">
+                <h1 class="uk-modal-title">Choose your game!</h1>
+            </div>
+            <div class="uk-modal-body" uk-overflow-auto>
+                <div class="uk-margin uk-card uk-card-body uk-card-default uk-card-small uk-border-rounded">
+                    <form class="uk-flex" uk-grid>
+                        <div class="uk-width-1-3">
+                            <label class="uk-form-label">I want my team to feel</label>
+                            <select class="uk-select">
+                                <option value="">Open and Invested</option>
+                                <option value="">Focussed and Driven</option>
+                                <option value="">Relaxed and Positive</option>
+                            </select>
+                        </div>
+                        <div class="uk-width-1-3">
+                            <label class="uk-form-label">Time available</label>
+                            <select class="uk-select">
+                                <option value="">15 minutes</option>
+                                <option value="">30 minutes</option>
+                                <option value="">45 minutes</option>
+                                <option value="">60+ minutes</option>
+                            </select>
+                        </div>
+                        <div class="uk-width-1-3">
+                            <label class="uk-form-label">Group size</label>
+                            <select class="uk-select">
+                                <option value="">&#60; 20 people</option>
+                                <option value="">20 - 50 people</option>
+                                <option value="">&#62; 50 people</option>
+                            </select>
+                        </div>
+                    </form>
+                    <div class="uk-margin uk-text-right">
+                        <button class="uk-button uk-button-primary uk-border-rounded" type="submit">Search Games</button>
                     </div>
-                    <div class="uk-width-1-3">
-                        <label class="uk-form-label">Time available</label>
-                        <select class="uk-select">
-                            <option value="">15 minutes</option>
-                            <option value="">30 minutes</option>
-                            <option value="">45 minutes</option>
-                            <option value="">60+ minutes</option>
-                        </select>
+                </div>
+                <div class="uk-child-width-1-2@s uk-child-width-1-3@m uk-text-center uk-flex-center" uk-grid>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 1</div>
                     </div>
-                    <div class="uk-width-1-3">
-                        <label class="uk-form-label">Group size</label>
-                        <select class="uk-select">
-                            <option value="">&#60; 20 people</option>
-                            <option value="">20 - 50 people</option>
-                            <option value="">&#62; 50 people</option>
-                        </select>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 2</div>
                     </div>
-                </form>
-                <div class="uk-margin uk-text-right">
-                    <button class="uk-button uk-button-primary uk-border-rounded" type="submit">Search Games</button>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 3</div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 4</div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 5</div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 6</div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 7</div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 8</div>
+                    </div>
                 </div>
             </div>
-            <div class="uk-child-width-1-2@s uk-child-width-1-3@m uk-text-center uk-flex-center" uk-grid>
-                <div>
-                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 1</div>
-                </div>
-                <div>
-                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 2</div>
-                </div>
-                <div>
-                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 3</div>
-                </div>
-                <div>
-                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 4</div>
-                </div>
-                <div>
-                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 5</div>
-                </div>
-                <div>
-                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 6</div>
-                </div>
-                <div>
-                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 7</div>
-                </div>
-                <div>
-                    <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 8</div>
-                </div>
-            </div>
-            <p class="uk-text-right">
+            <div class="uk-modal-footer uk-text-right">
                 <button class="uk-button uk-button-default uk-modal-close uk-border-rounded" type="button">Cancel</button>
                 <button class="uk-button uk-button-primary uk-border-rounded" type="button">Create Game</button>
-            </p>
+            </div>
         </div>
     </div>
 
