--- a/index.html
+++ b/index.html
@@ -224,30 +224,66 @@
                         <button class="uk-button uk-button-primary uk-border-rounded" type="submit">Search Games</button>
                     </div>
                 </div>
-                <div class="uk-child-width-1-2@s uk-child-width-1-3@m uk-text-center uk-flex-center" uk-grid>
+                <div id="game-grid" class="uk-child-width-1-2@s uk-child-width-1-3@m uk-text-center uk-flex-center uk-grid-match" uk-grid>
                     <div>
-                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 1</div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                            <div class="uk-text-large uk-text-left">Long Walks on the Beach</div>
+                            <p class="uk-text-left">Use word association to figure out your team identity.</p>
+                        </div>
                     </div>
                     <div>
-                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 2</div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                            <div class="uk-text-large uk-text-left">The Ascent</div>
+                            <p class="uk-text-left">Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                        </div>
                     </div>
                     <div>
-                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 3</div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                            <div class="uk-text-large uk-text-left">The Ascent (Rapid)</div>
+                            <p class="uk-text-left">Combine clues from five smaller puzzles to reveal the key to the master puzzle.</p>
+                        </div>
                     </div>
                     <div>
-                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 4</div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                            <div class="uk-text-large uk-text-left">The Hunt</div>
+                            <p class="uk-text-left">Locate the master puzzle by combining clues from seven smaller puzzles.</p>
+                        </div>
                     </div>
                     <div>
-                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 5</div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                            <div class="uk-text-large uk-text-left">The Puzzle</div>
+                            <p class="uk-text-left">Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                        </div>
                     </div>
                     <div>
-                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 6</div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                            <div class="uk-text-large uk-text-left">The Puzzle LITE</div>
+                            <p class="uk-text-left">Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                        </div>
                     </div>
                     <div>
-                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 7</div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                            <div class="uk-text-large uk-text-left">The Puzzle PRO</div>
+                            <p class="uk-text-left">Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                        </div>
                     </div>
                     <div>
-                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">Game 8</div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                            <div class="uk-text-large uk-text-left">The Riddle</div>
+                            <p class="uk-text-left">Combine clues from ten smaller puzzles to reveal the key to the riddle.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                            <div class="uk-text-large uk-text-left">The Trip</div>
+                            <p class="uk-text-left">Combine clues from ten smaller puzzles to reveal the key to the master puzzle.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+                            <div class="uk-text-large uk-text-left">A Christmas Puzzle</div>
+                            <p class="uk-text-left">Solve ten puzzles to complete the Christmas List.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -257,6 +293,13 @@
             </div>
         </div>
     </div>
+
+    <!-- <template id="game-template">
+        <div class="uk-card uk-card-default uk-card-body uk-border-rounded">
+            <div class="game-template-title uk-text-large uk-text-left"></div>
+            <p class="game-template-description uk-text-left"></p>
+        </div>
+    </template> -->
 
     <script>
 
@@ -311,20 +354,42 @@
 
         }
 
-        let games = [
+        // let games = [
 
-            { title: "Long Walks on the Beach", description: "Use word association to figure out your team identity." },
-            { title: "The Ascent", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle." },
-            { title: "The Ascent (Rapid)", description: "Combine clues from five smaller puzzles to reveal the key to the master puzzle." },
-            { title: "The Hunt", description: "Locate the master puzzle by combining clues from seven smaller puzzles." },
-            { title: "The Puzzle", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle." },
-            { title: "The Puzzle LITE", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle." },
-            { title: "The Puzzle PRO", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle." },
-            { title: "The Riddle", description: "Combine clues from ten smaller puzzles to reveal the key to the riddle." },
-            { title: "The Trip", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle." },
-            { title: "A Christmas Puzzle", description: "Solve ten puzzles to complete the Christmas List." },
+        //     { title: "Long Walks on the Beach", description: "Use word association to figure out your team identity." },
+        //     { title: "The Ascent", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle." },
+        //     { title: "The Ascent (Rapid)", description: "Combine clues from five smaller puzzles to reveal the key to the master puzzle." },
+        //     { title: "The Hunt", description: "Locate the master puzzle by combining clues from seven smaller puzzles." },
+        //     { title: "The Puzzle", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle." },
+        //     { title: "The Puzzle LITE", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle." },
+        //     { title: "The Puzzle PRO", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle." },
+        //     { title: "The Riddle", description: "Combine clues from ten smaller puzzles to reveal the key to the riddle." },
+        //     { title: "The Trip", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle." },
+        //     { title: "A Christmas Puzzle", description: "Solve ten puzzles to complete the Christmas List." },
 
-        ];
+        // ];
+
+        // function insertGames() {
+
+        //     let gameGrid = document.querySelector('#game-grid');
+
+        //     for (let game of games) {
+
+        //         let gameTemplate = document.querySelector('#game-template').content.cloneNode(true);
+
+        //         let titleElem = gameTemplate.querySelector('.game-template-title');
+        //         titleElem.innerText = game.title;
+
+        //         let descriptionElem = gameTemplate.querySelector('.game-template-description');
+        //         descriptionElem.innerText = game.description;
+
+        //         gameGrid.appendChild(gameTemplate);
+
+        //     }
+
+        // }
+
+        // insertGames();
 
     </script>
 
