Add game Ids and tags to JS data.

--- a/index.html
+++ b/index.html
@@ -354,20 +354,19 @@
 
         }
 
-        // let games = [
+        let games = [
 
-        //     { title: "Long Walks on the Beach", description: "Use word association to figure out your team identity." },
-        //     { title: "The Ascent", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle." },
-        //     { title: "The Ascent (Rapid)", description: "Combine clues from five smaller puzzles to reveal the key to the master puzzle." },
-        //     { title: "The Hunt", description: "Locate the master puzzle by combining clues from seven smaller puzzles." },
-        //     { title: "The Puzzle", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle." },
-        //     { title: "The Puzzle LITE", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle." },
-        //     { title: "The Puzzle PRO", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle." },
-        //     { title: "The Riddle", description: "Combine clues from ten smaller puzzles to reveal the key to the riddle." },
-        //     { title: "The Trip", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle." },
-        //     { title: "A Christmas Puzzle", description: "Solve ten puzzles to complete the Christmas List." },
+            { id: 0, title: "The Puzzle", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle.", tags: { feel: [ 'open', 'focused' ], time: [ '45', '60' ], size: [ '<20', '20-50', '>50' ] } },
+            { id: 1, title: "The Puzzle LITE", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle.", tags: { feel: [ 'open', 'relaxed' ], time: [ '45', '60' ], size: [ '<20', '20-50', '>50' ] } },
+            { id: 2, title: "The Puzzle PRO", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle.", tags: { feel: [ 'focused' ], time: [ '45', '60' ], size: [ '<20', '20-50', '>50' ] } },
+            { id: 3, title: "The Riddle", description: "Combine clues from ten smaller puzzles to reveal the key to the riddle.", tags: { feel: [ 'open', 'relaxed' ], time: [ '45', '60' ], size: [ '<20', '20-50', '>50' ] } },
+            { id: 4, title: "The Trip", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle.", tags: { feel: [ 'open', 'energised' ], time: [ '45', '60' ], size: [ '<20', '20-50', '>50' ] } },
+            { id: 5, title: "The Hunt", description: "Locate the master puzzle by combining clues from seven smaller puzzles.", tags: { feel: [ 'focused', 'energised' ], time: [ '45', '60' ], size: [ '<20', '20-50', '>50' ] } },
+            { id: 6, title: "The Ascent", description: "Combine clues from ten smaller puzzles to reveal the key to the master puzzle.", tags: { feel: [ 'open', 'focused' ], time: [ '45', '60' ], size: [ '<20', '20-50', '>50' ] } },
+            { id: 7, title: "The Ascent (Rapid)", description: "Combine clues from five smaller puzzles to reveal the key to the master puzzle.", tags: { feel: [ 'focused', 'energised' ], time: [ '15', '30' ], size: [ '<20', '20-50', '>50' ] } },
+            { id: 8, title: "Long Walks on the Beach", description: "Use word association to figure out your team identity.", tags: { feel: [ 'open', 'relaxed' ], time: [ '30', '45' ], size: [ '<20' ] } },
 
-        // ];
+        ];
 
         // function insertGames() {
 
